tests/fixtures/invalid/pow_none_int_set.py
# Cannot call pow() with None, Int, Set[int]
x = pow(None, 1, {1, 2, 3})
